--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ nav.index {
   nav.index div.menu-website {
     margin-left: 59%; }
   nav.index ul.menu {
-    float: left;
+    float: right;
     padding-left: 0px;
     width: 300px; }
   nav.index li {
@@ -29,9 +29,13 @@ nav.index {
     color: #4d4d4d;
     background-color: #e6e6e6; }
 
-div.wrap-header {
-  background-color: #534741;
-  padding-top: 0px; }
+.left-color {
+  width: calc(50% - 435px);
+  left: 0px;
+  height: 45px;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  z-index: 10; }
 
 .header, .wrap-search-area {
   display: inline-block;
@@ -46,7 +50,8 @@ div.wrap-header {
     font-weight: 600; }
 
 .header {
-  width: 59%;
+  width: 100%;
+  max-width: 570px;
   background-color: rgba(0, 0, 0, 0.3);
   font-size: 0.8rem; }
   .header nav.left {
@@ -100,10 +105,11 @@ div.wrap-header {
 
 .header.detail + .wrap-search-area .search {
   border: 1px solid #a6a6a6;
-  box-sizing: content-box; }
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box; }
 
 .wrap-search-area {
-  width: 41%;
+  float: right;
   padding-top: 13px; }
   .wrap-search-area .search-area {
     float: left;
@@ -133,6 +139,13 @@ footer {
       color: inherit;
       text-decoration: none; }
 
+                                    
+  
+              
+                 
+               
+             
+  
    
                    
 
@@ -171,7 +184,6 @@ select.minimal {
              
   margin: 0;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none; }
@@ -180,6 +192,8 @@ select.minimal {
   font-size: 0.5rem;
   height: 23px;
   width: 57px;
+  background-image: -webkit-linear-gradient(45deg, transparent 50%, #e64d24 45%), -webkit-linear-gradient(315deg, #e64d24 50%, transparent 45%);
+  background-image: -o-linear-gradient(45deg, transparent 50%, #e64d24 45%), -o-linear-gradient(315deg, #e64d24 50%, transparent 45%);
   background-image: linear-gradient(45deg, transparent 50%, #e64d24 45%), linear-gradient(135deg, #e64d24 50%, transparent 45%);
   background-position: calc(100% - 10px) calc(0.85em), calc(100% - 5px) calc(0.85em);
   background-size: 5px 5px, 5px 5px, 1px 1.5em;
@@ -244,3 +258,37 @@ select.minimal {
   height: 100%;
   outline: none;
   border: none; }
+
+.visible-in-mobile {
+  display: none; }
+
+@media only screen and (max-width: 767px) {
+  .invisible-in-mobile {
+    display: none; }
+
+  .visible-in-mobile {
+    display: block; }
+
+  .wrap-narrow {
+    width: 100% !important; }
+
+  .title {
+    padding: 0;
+    min-height: 165px;
+    text-align: center; }
+    .title .head {
+      margin: 0;
+      height: auto;
+      border-bottom: none;
+      padding: 40px 0 0; }
+      .title .head h3 {
+        font-size: 31px;
+        letter-spacing: 0.6px;
+        color: #000000; }
+        .title .head h3:before {
+          content: '';
+          width: 107px;
+          height: 7px;
+          display: block;
+          background-color: #333333;
+          margin: auto auto 20px; } }
