--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,11 @@
+@charset "UTF-8";
+                                    
+  
+              
+                 
+               
+             
+  
 footer {
   min-height: 105px;
   padding-top: 10px;
@@ -15,3 +23,20 @@ footer {
     footer ul.links a {
       color: inherit;
       text-decoration: none; }
+
+@media only screen and (max-width: 767px) {
+  footer.wrap-narrow {
+    margin-top: 50px;
+    font-size: 0.7rem; }
+
+  footer ul.links {
+    text-align: center; }
+    footer ul.links li {
+      font-size: 0.6rem;
+      text-align: center;
+      padding-right: 5px;
+      margin-right: 2px;
+      margin-bottom: 3px; }
+
+  .copyright {
+    text-align: center; } }
