--- a/css/detail.css
+++ b/css/detail.css
@@ -6,19 +6,9 @@
                
              
   
-.category-detail {
-  background-color: #595959;
-  border-bottom: 7px solid #e64d24;
-  margin-top: 35px;
-  font-size: 0.7rem;
-  height: 40px;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  line-height: 40px;
-  color: #cccccc; }
-  .category-detail span.current {
-    color: white; }
-
+@media only screen and (min-width: 1366px) {
+  hr.invisible-in-mobile {
+    display: block; } }
 .wrap-contents {
   background-color: #f2f2f2;
   padding-top: 43px;
@@ -45,17 +35,17 @@
       margin-bottom: 30px; }
     .wrap-contents .left h3 {
       color: #e64d24;
-      font-size: 1.7rem;
+      font-size: 2.4rem;
       font-weight: 600; }
     .wrap-contents .left h4 {
-      font-size: 1.1rem;
+      font-size: 1.5rem;
       color: #c85131;
       margin-top: 10px; }
     .wrap-contents .left .desc {
       background-color: #999999;
       width: 100%;
       color: white;
-      font-size: 0.8rem;
+      font-size: 1.5rem;
       padding: 5px; }
   .wrap-contents .right {
     padding-top: 160px; }
@@ -71,7 +61,8 @@
     float: left; }
     .wrap-contents .select-work h3, .wrap-contents .select-member h3 {
       margin-bottom: 30px;
-      font-weight: 600; }
+      font-weight: 600;
+      font-size: 1.5rem; }
   .wrap-contents .select-work {
     width: 300px;
     height: 550px;
@@ -85,7 +76,7 @@
     overflow-y: auto;
     background-color: white; }
     .wrap-contents .selectable-work .item {
-      font-size: 0.8rem;
+      font-size: 1.1rem;
       font-weight: 600;
       padding-left: 13px;
       height: 30px;
@@ -104,6 +95,8 @@
     .wrap-contents .select-member .search-btn {
       margin-top: 30px;
       float: right; }
+    .wrap-contents .select-member input {
+      font-size: 1.2rem; }
 
 .wrap-narrow {
   overflow: hidden;
@@ -156,12 +149,13 @@
 .search-result .title {
   text-align: center;
   max-height: 135px;
-  font-size: 1.5rem;
+  font-size: 2.2rem;
   font-weight: 600;
   padding-top: 60px;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
   border-bottom: 1px solid #8c8c8c;
-  margin-bottom: 95px; }
+  margin-bottom: 50px;
+  color: #1a1a1a; }
 .search-result .result-item {
   width: 220px;
   height: 487px;
@@ -170,7 +164,8 @@
   font-weight: 500;
   display: inline-block;
   margin-right: 100px;
-  margin-left: 0px; }
+  margin-left: 0px;
+  color: #1a1a1a; }
   .search-result .result-item .head {
     width: 100%;
     height: 10px;
@@ -186,16 +181,18 @@
     font-weight: 500;
     position: relative; }
   .search-result .result-item .name {
-    font-size: 1.2rem;
-    font-weight: 600; }
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #1a1a1a; }
   .search-result .result-item .more-detail {
     position: absolute;
-    width: 45px;
+    width: 50px;
     height: 20px;
-    right: 0px;
     top: 0px;
+    right: 0px;
     border: 1px solid black;
-    font-size: 0.5rem;
+    font-size: 1rem;
+    color: #1a1a1a;
     text-align: center;
     line-height: 20px;
     cursor: pointer; }
@@ -205,14 +202,20 @@
     color: white;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 0.75rem;
+    font-size: 1.2rem;
     padding: 3px; }
   .search-result .result-item .tel {
-    margin-bottom: 10px; }
+    margin-bottom: 5px;
+    font-size: 1.2rem; }
+  .search-result .result-item .email {
+    font-size: 1.2rem; }
   .search-result .result-item .mainwork {
-    margin-top: 25px; }
+    margin-top: 24px; }
     .search-result .result-item .mainwork .work-title {
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      font-size: 1.1rem; }
+    .search-result .result-item .mainwork .contents {
+      font-size: 1.1rem; }
 @media only screen and (min-width: 768px) {
   .search-result .result-item:nth-child(3n+1) {
     margin-right: 0px; } }
@@ -360,3 +363,219 @@
     .search-result .wrap-btn {
       width: 100%;
       margin-top: 0 !important; } }
+                                    
+  
+              
+                 
+               
+             
+  
+@media only screen and (min-width: 768px) {
+  .member-detail-card {
+    width: 868px;
+    background-color: #F2F2F2;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+    .member-detail-card .card-header {
+      height: 166px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
+      .member-detail-card .card-header .member-job {
+        width: 139px;
+        height: 136px;
+        background-color: #436797;
+        color: #ffffff;
+        margin-left: 85px;
+        text-align: center;
+        font-size: 1.2em;
+        line-height: 136px; }
+      .member-detail-card .card-header .member-name {
+        margin: auto 167px;
+        font-size: 2.3em;
+        border-bottom: 2px solid #999999;
+        padding-bottom: 10px; }
+        .member-detail-card .card-header .member-name .text {
+          font-weight: 700; }
+    .member-detail-card .individual-info {
+      width: 302px;
+      background-color: #E6E6E6;
+      margin-top: 60px;
+      position: relative;
+      margin-bottom: 118px; }
+      .member-detail-card .individual-info .result-img {
+        width: 202px;
+        height: 222px;
+        top: -60px;
+        position: relative;
+        margin-left: 50px; }
+      .member-detail-card .individual-info .marker-image {
+        width: 45px;
+        height: 41px;
+        position: absolute;
+        right: -10px;
+        top: -35px; }
+    .member-detail-card .info-box-container {
+      width: 198px;
+      margin: auto; }
+      .member-detail-card .info-box-container .info-box {
+        width: 100%;
+        margin-bottom: 50px; }
+        .member-detail-card .info-box-container .info-box .info-name {
+          display: inline-block;
+          font-size: 1em;
+          font-weight: 700;
+          padding-bottom: 15px;
+          border-bottom: 2px solid black; }
+        .member-detail-card .info-box-container .info-box .info-details {
+          margin-top: 15px; }
+          .member-detail-card .info-box-container .info-box .info-details .info-item {
+            font-size: 0.8em;
+            line-height: 1.5em;
+            font-weight: 700; }
+        .member-detail-card .info-box-container .info-box.contact dt, .member-detail-card .info-box-container .info-box.contact dl {
+          font-size: 0.8em;
+          font-weight: 700;
+          line-height: 1.5em; }
+        .member-detail-card .info-box-container .info-box.contact dt {
+          margin-top: 15px; }
+    .member-detail-card .member-history {
+      margin-bottom: 118px;
+      width: 565px;
+      padding-top: 30px; }
+      .member-detail-card .member-history .history-box-container {
+        width: 426px;
+        margin: auto; }
+        .member-detail-card .member-history .history-box-container .history-box {
+          width: 100%;
+          margin-bottom: 50px; }
+          .member-detail-card .member-history .history-box-container .history-box .history-name {
+            display: inline-block;
+            font-size: 1em;
+            font-weight: 700;
+            padding-bottom: 15px;
+            border-bottom: 2px solid black; }
+          .member-detail-card .member-history .history-box-container .history-box .member-introduce {
+            text-align: justify;
+            font-size: 0.9em;
+            font-weight: 700;
+            line-height: 1.5em;
+            margin-top: 15px; }
+          .member-detail-card .member-history .history-box-container .history-box .history-details {
+            margin-top: 15px; }
+            .member-detail-card .member-history .history-box-container .history-box .history-details .history-item {
+              font-size: 0.8em;
+              line-height: 1.5em; } }
+@media only screen and (max-width: 767px) {
+  .middle-search {
+    padding: 0;
+    background-color: #ffffff;
+    min-height: 165px;
+    height: auto; }
+    .middle-search .minimal {
+      margin-top: 30px; }
+
+  .search-result {
+    background-color: #E6E6E6;
+    padding: 15px; }
+    .search-result .wrap-btn {
+      width: 100%;
+      margin-top: 0 !important; }
+
+  .member-detail-card {
+    background-color: #ffffff;
+    max-width: 605px;
+    margin: auto; }
+    .member-detail-card .individual-info-mobile {
+      display: -webkit-box !important;
+      display: -webkit-flex !important;
+      display: -ms-flexbox !important;
+      display: flex !important;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap;
+      padding: 15px; }
+      .member-detail-card .individual-info-mobile .image-and-contact {
+        max-width: 262px;
+        padding: 15px;
+        background-color: #B3B3B3;
+        margin: auto; }
+        .member-detail-card .individual-info-mobile .image-and-contact .result-img {
+          width: 100%;
+          height: auto; }
+        .member-detail-card .individual-info-mobile .image-and-contact .info-details {
+          text-align: center; }
+          .member-detail-card .individual-info-mobile .image-and-contact .info-details dt {
+            color: white;
+            font-weight: 400; }
+          .member-detail-card .individual-info-mobile .image-and-contact .info-details dd:nth-of-type(1) {
+            margin-bottom: 15px; }
+      .member-detail-card .individual-info-mobile .info-box-container {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
+        min-width: 250px;
+        padding: 15px; }
+        .member-detail-card .individual-info-mobile .info-box-container .member-name {
+          font-size: 2.4em;
+          font-weight: 700; }
+        .member-detail-card .individual-info-mobile .info-box-container .member-job {
+          display: inline-block;
+          padding: 8px 18px;
+          background-color: #436697;
+          color: #ffffff;
+          margin-top: 17px; }
+        .member-detail-card .individual-info-mobile .info-box-container .info-box {
+          margin-top: 25px; }
+          .member-detail-card .individual-info-mobile .info-box-container .info-box .info-name {
+            font-size: 1.5em; }
+          .member-detail-card .individual-info-mobile .info-box-container .info-box .info-details {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-flex-wrap: wrap;
+                -ms-flex-wrap: wrap;
+                    flex-wrap: wrap;
+            margin-top: 24px; }
+            .member-detail-card .individual-info-mobile .info-box-container .info-box .info-details .info-item {
+              font-size: 1.1em;
+              line-height: 1.5em;
+              text-align: left;
+              color: #000000; }
+              .member-detail-card .individual-info-mobile .info-box-container .info-box .info-details .info-item:not(:last-child):after {
+                content: ',\00a0'; }
+    .member-detail-card .member-history .history-box-container .history-box {
+      padding: 25px 35px;
+      border-top: 1px solid #D2D2D2; }
+      .member-detail-card .member-history .history-box-container .history-box .history-name {
+        font-size: 1.5em;
+        font-weight: 700; }
+      .member-detail-card .member-history .history-box-container .history-box .member-introduce {
+        font-size: 1.2em;
+        line-height: 1.4em;
+        font-weight: 700;
+        margin-top: 30px; }
+      .member-detail-card .member-history .history-box-container .history-box .history-details {
+        margin-top: 30px; }
+        .member-detail-card .member-history .history-box-container .history-box .history-details .history-item {
+          font-size: 1.2em;
+          line-height: 1.4em;
+          font-weight: 700; } }
+.wrap-btn .btn-line {
+  margin-top: 50px; }
+  .wrap-btn .btn-line i {
+    position: relative;
+    top: 0px;
+    right: -5px; }
